added comics api. Clean middleware to support body caching instead of doing in service
